Sube segunda edición post subrayado

--- a/posts/que-es-y-que-no-es-el-subrayado.mdx
+++ b/posts/que-es-y-que-no-es-el-subrayado.mdx
@@ -6,41 +6,61 @@ description: 'Técnica de estudio que sirve para resaltar las ideas esenciales o
 reading: '15'
 ---
 
-![Lectura maravillosa](https://tizanasoft.com/static/BOOK_Y_TE.png)
+![Banner de Centrar Atención](https://tizanasoft.com/static/BANNER_CENTRAR_ATENCION.png)
 
 
+Subrayar es destacar visualmente las ideas más importantes de un texto, para centrar así la atención del lector. Un buen subrayado le da el superpoder al lector de detectar muy rápido lo más importante del texto.
 
-Es una técnica de estudio individual, que se puede ir perfeccionando con la practica.
+El lector, puede ser tu yo del futuro, que regresa para repasar o re-encontrarse con el tema.
 
-Se utiliza al mismo tiempo que la lectura comprensiva, durante la segunda o tercera lectura del texto.
+El subrayado, es una técnica de estudio individual, se utiliza al mismo tiempo que la lectura comprensiva, durante la segunda o tercera lectura del texto. Sirve para resaltar las ideas esenciales o más importantes de un texto.
 
-Sirve para resaltar las ideas esenciales o mas importantes de un texto.
+Recopila lo fundamental del tema, favorece la atención del lector y ahorro de tiempo al momento de repasar. Facilita la elaboración de resúmenes, esquemas u otras formas de síntesis, al tener resaltado todo lo que merece ser destacado.
 
-Recopila lo fundamental del tema, favorece la atención del lector y ahorro de tiempo al momento de repasar.
+Fomenta la lectura activa, porque amerita la comprensión lectora, por ello, facilita la concentración de la mente, ya que te sumerge en una tarea que usa toda tu atención, dejando como resultado un texto sintetizado.
 
-Fomenta la lectura activa, porque amerita la comprensión y transformación del texto original y, por ello, facilita la concentración de la mente, ya que te sumerge en una tarea que usa toda tu atención. 
-
-Facilita la elaboración de resúmenes y esquemas, al tener resaltado todo lo que merece ser destacado.
+A continuación, se comparten algunos puntos a tener en cuenta al momento de subrayar:
 
 ## 1. ¿Cómo saber qué es lo más importante de un texto?
 
-**Ideas principales o esenciales:** se puede resaltar con una linea simple horizontal debajo de las palabras o frases.
+No todo en un texto es importante. Por eso te sugerimos, tomar textos de tu preferencia para ir perfeccionando con la practica. En muchas ocasiones se abusa del subrayado, haciendo uso excesivo del subrayando para resaltar casi todo el texto entero, esto resulta inadecuado para la atención y retención lectora.
 
-**Ideas secundarias o importantes:** son aquellas que explican o dan más información sobre la idea principal. Se puede diferenciar con doble lineas o con otro color o con otro tipo de trazo de subrayado. 
+Un buen subrayado presenta una jerarquía de ideas, en orden de importancia:
+
+### Ideas principales:
+
+Contienen la información clave del tema, son ideas esenciales que el autor desea transmitir.
+
+### Ideas secundarias o importantes:
+
+Son aquellas que explican o dan más información sobre las ideas principales. Dependen directamente de las ideas principales. Se pueden eliminar si afectar la columna vertebrar del texto. Pero sirven para ampliar, argumentar, ejemplificar o enriquecer la información provista por las ideas principales.
+
+Identificar las ideas principales y secundarias puede ser más o menos difícil, dependiendo de la complejidad del texto.
+
+Algunas preguntas que puedes hacerte para identificarlas son:
+
+* ¿De qué se trata el texto?
+
+* ¿Qué es lo que el autor quiere que aprenda o entienda?
+
+* ¿Qué información aporta el texto para sustentar las ideas principales?
+
+Puede parecer complicado, ¡Pero no te desanimes!
 
 ## 2. ¿Qué necesito para subrayar?
 
+Escoge el estilo que mejor convenga para facilitar la percepción y atraer la atención del lector.
+
 ![02 Usando Colores](https://tizanasoft.com/static/02_USANDO_COLORES.png)
 
-Puedes usar dos bolígrafos de diferentes colores, uno rojo y otro azul, por ejemplo. Utiliza el azul para las ideas principales y el rojo para las importantes (o viceversa, si lo prefieres así). 
+Puedes usar dos bolígrafos de diferentes colores, uno rojo y otro azul, por ejemplo. Utiliza el azul para las ideas principales y el rojo para las importantes (o viceversa, si lo prefieres así).
 
 Se sugiere utilizar máximo dos colores, el exceso de colorido puede descentrar la atención del estudiante; además, mientras cambia de color al subrayar, pierde tiempo.
 
 
 ![01 Usando Líneas](https://tizanasoft.com/static/01_USANDO_LINEAS.png)
 
-Quizás prefieras un solo color;  entonces puedes diferenciar las ideas principales de las secundarias remarcando las primeras con doble trazo = y las segundas con un trazo 
-simple - .
+Quizás prefieras un solo color;  entonces puedes diferenciar las ideas principales de las secundarias remarcando las primeras con un trazo sencillo - y las segundas con un trazo doble = .
 
 Evitar utilizar demasiados colores o muchos trazos distintos.
 
@@ -66,7 +86,9 @@ Usando formas geométricas.
 
 ### Paso 4. Subrayar ideas.
 
-Evitar subrayar en exceso. Se debe ser analítico y selectivo para resaltar solo lo mas relevante.
+Evitar subrayar en exceso. Se debe ser analítico y selectivo para resaltar solo lo más relevante.
+
+Puedes omitir los conectivos, para destacar solo las palabras o frases clave.
 
 Si un párrafo completo parece ser muy importante, puede trazarse una línea vertical en el margen derecho, que resalte su importancia.
 
@@ -76,14 +98,16 @@ Combina el subrayado con notas marginales para aclarar, complementar o agregar p
 
 ### Ejemplo:
 
+Para este ejemplo, se presenta el estilo de subrayado con dos colores: rojo para ideas principales y azul para ideas secundarias. Del lado del margen derecho se realizaron una notas marginales, que explican con mis propias palabras el texto.
+
 ![Ejemplo de Subrayado Algoritmo Wikipedia](https://tizanasoft.com/static/EJEMPLO_SUBRAYADO_ALGORITMO_WIKI.png)
 
 ## 4. ¿Cuales son las desventajas del subrayado?
 
-    • Deterioro del libro o de la hoja de apuntes al rayar sobre las paginas.
+    • En el caso de los libros o materiales en físico, el deterioro del libro o de la hoja de apuntes al rayar sobre las paginas. Si el libro no es de su propiedad, podría fotocopiarlo.
 
     • Se dificulta cuando otra persona a subrayado previamente el texto. Lo que es relevante para una persona quizá no lo sea para otra. De preferencia aplica subrayado a documentos originales o copias fieles no tratadas.
 
 ## 5. ¿Y tú, te animas a practicar el subrayado?
 
-Recuerda que la práctica constante y el uso adecuado de esta técnica te permitirán mejorar tu capacidad de estudio y comprensión de textos. ¡No dudes en ponerla en práctica y verás los resultados! 
+Recuerda que la práctica constante y el uso adecuado de esta técnica te permitirán mejorar tu capacidad de estudio y comprensión de textos. ¡No dudes en ponerla en práctica y verás los resultados!
