refactor: :recycle: Actualizando la url de los archivos multimedia (imagenes)

--- a/posts/como-conectar-python-con-postgre-sql.mdx
+++ b/posts/como-conectar-python-con-postgre-sql.mdx
@@ -5,7 +5,7 @@ tag: 'python'
 description: 'Conexión paso a paso de Python y PostgreSQL haciendo uso de un entorno virtual y python-decouple.'
 reading: '15'
 authorName: 'Edwuard Madriz'
-authorPhoto: 'https://tizanasoft.com/static/EDWUARD_MADRIZ.png'
+authorPhoto: 'https://tizanasoft.com/blog/EDWUARD_MADRIZ.png'
 authorLink: 'https://www.facebook.com/EdwuardMadriz'
 authorRole: 'Desarrollador Web'
 authorResume: 'Soy desarrollador web con más de un año de experiencia, mi fortaleza radica en trabajar en el “detrás de escena” de los sitios web que es la parte que se encarga de que toda la lógica de una página web funcione, también tengo habilidades para trabajar en la parte visual.'
@@ -123,10 +123,10 @@ finally:
 ## Ejemplo practico
 En este ejemplo, la tabla "películas nominadas" contiene información sobre las películas nominadas, como su título, año de estreno y director. Mientras que la tabla "ganadores" en categorías de premios **Golden Globes 2024** tiene registros de las películas que ganaron en ciertas categorías y quiénes fueron los ganadores en esas categorías.
 
-![Tabla de películas nominadas](https://tizanasoft.com/static/tabla-1.png)
+![Tabla de películas nominadas](https://tizanasoft.com/blog/tabla-1.png)
 
 
-![Tabla de ganadores](https://tizanasoft.com/static/tabla-2.png)
+![Tabla de ganadores](https://tizanasoft.com/blog/tabla-2.png)
 
 Creamos las tablas:
 
@@ -236,7 +236,7 @@ for row in rows1:
 ```
 Resultados :
 
-![Resultados de la primera consulta](https://tizanasoft.com/static/query_1.png)
+![Resultados de la primera consulta](https://tizanasoft.com/blog/query_1.png)
 
 ```python
 # Consulta: Categorías de premios y películas ganadoras
@@ -253,7 +253,7 @@ for row in rows2:
 ```
 Resultados :
 
-![Resultados de la segunda consulta](https://tizanasoft.com/static/query_2.png)
+![Resultados de la segunda consulta](https://tizanasoft.com/blog/query_2.png)
 
 ```python
 # Consulta: Contar películas nominadas por director
@@ -271,7 +271,7 @@ for row in rows3:
 
 Resultados :
 
-![Resultados de la tercera consulta](https://tizanasoft.com/static/query_3.png)
+![Resultados de la tercera consulta](https://tizanasoft.com/blog/query_3.png)
 
 ```python
 # Consulta: Películas ganadoras y su director
@@ -288,7 +288,7 @@ for row in rows4:
 ```
 Resultados :
 
-![Resultados de la cuarta consulta](https://tizanasoft.com/static/query_4.png)
+![Resultados de la cuarta consulta](https://tizanasoft.com/blog/query_4.png)
 
 ```python
 # Consulta: Año con más nominaciones
@@ -308,7 +308,7 @@ for row in rows5:
 
 Resultados :
 
-![Resultados de la quinta consulta](https://tizanasoft.com/static/query_5.png)
+![Resultados de la quinta consulta](https://tizanasoft.com/blog/query_5.png)
 
 Recuerda adaptar las consultas **SQL** según las necesidades de tu aplicación y manejar adecuadamente los errores utilizando bloques **try** y **except**.
 
