fix: :bug: solucionado representacion de comandos de consola y presentacion de nombre y apellido en el cardAuthor.jsx

--- a/posts/como-conectar-python-con-postgre-sql.mdx
+++ b/posts/como-conectar-python-con-postgre-sql.mdx
@@ -31,7 +31,7 @@ python -m venv env
 Activa el entorno virtual:
 
 En Windows:
-```
+```bash
 env\Scripts\activate
 ```
 En macOS/Linux:
@@ -41,7 +41,7 @@ source env/bin/activate
 
 ## Instalación de bibliotecas
 Primero, asegúrate de tener instaladas las bibliotecas necesarias:
-```
+```bash
 pip install psycopg2-binary python-decouple
 ```
 
@@ -51,7 +51,7 @@ pip install psycopg2-binary python-decouple
 - Crea un archivo llamado **.env** en el directorio de tu proyecto.
 - Agrega las variables de entorno necesarias en el archivo **.env**:
 
-```
+```bash
 DB_HOST=tu_host
 DB_DATABASE=tu_base_de_datos
 DB_USER=tu_usuario
