refactor: :recycle: Agregue la etiqueta de Autor Invitado

--- a/posts/como-conectar-python-con-postgre-sql.mdx
+++ b/posts/como-conectar-python-con-postgre-sql.mdx
@@ -313,3 +313,5 @@ Resultados :
 Recuerda adaptar las consultas **SQL** según las necesidades de tu aplicación y manejar adecuadamente los errores utilizando bloques **try** y **except**.
 
 ¡Ahora estás listo para conectar **Python** con **PostgreSQL** de manera segura y eficiente!
+
+### Autor Invitado
