Agrega infografía y autora invitada

--- a/posts/test.mdx
+++ b/posts/test.mdx
@@ -4,7 +4,14 @@ date: '2024-3-24'
 tag: 'study'
 description: 'Test description'
 reading: '16'
+authorName: 'Annya Rivas'
+authorPhoto: 'https://tizanasoft.com/static/FOTO_ANNYA_RIVAS.jpeg'
+authorLink: 'https://www.instagram.com/annyarivas'
+authorRole: 'Redactora Creativa'
+authorResume: 'Escritora, apasionada por la literatura, el arte, los deportes y la moda. Anteriormente tenía un blog sobre productividad y métodos de estudio.'
 ---
+
+![Infografía: ¿Una carrera o porqué no, un oficio? ](https://tizanasoft.com/static/INFOGRAFIA_CARRERA_U_OFICIO.png)
 
 &nbsp;&nbsp;&nbsp;&nbsp; Cuando hablamos del futuro, la idea de qué haremos y cómo nos desarrollaremos laboralmente suele asustarnos, pues no solo se trata de una profesión u oficio, sino también, de la sucesión de pasos que tenemos que seguir para lograr lo que sea que nos propongamos a largo plazo.
 
@@ -189,3 +196,5 @@ Desempeñar oficios tienen diversos beneficios, que permiten el desarrollo y la 
 
 
 &nbsp;&nbsp;&nbsp;&nbsp; Para finalizar, y antes de tomar una decisión, siempre recuerda que puedes pedir ayuda o consejos a sus seres queridos, pero recuerda que la decisión final que determinará qué carrera u oficio seguir dependerá solamente de ti y tus aspiraciones a futuro, a su vez, no se puede pensar ambas cosas son excluyentes, puedes ser universitario y tener un oficio o viceversa, lo importante es que sea lo que elijas se alinee con tus sueños y deseos.
+
+## Autora Invitada
