Cambia título y descripción

--- a/posts/una-carrera-universitaria-o-por-que-no-un-oficio.mdx
+++ b/posts/una-carrera-universitaria-o-por-que-no-un-oficio.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Test'
+title: '¿Una carrera o por qué no, un oficio?'
 date: '2024-3-24'
 tag: 'study'
-description: 'Test description'
+description: '¿Una carrera o por qué no, un oficio? Ambas opciones tienen sus ventajas, y la decisión dependerá de tus gustos, habilidades, aptitudes y posibilidades.'
 reading: '16'
 authorName: 'Annya Rivas'
 authorPhoto: 'https://tizanasoft.com/static/FOTO_ANNYA_RIVAS.jpeg'
